--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -54,7 +54,7 @@
       
       <br>
     </div>
-    <button type="submit" name="button">Submit</button>
+    <button type="submit" class="submit-button" name="button">Submit</button>
   </form >
 </div>
 
