--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,31 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>FeedBox</title>
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+   
 
-
+<!-- Css Stylesheet -->
     <link rel="stylesheet" href="styles.css">
-
+<!-- Swup -->
+<script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script> 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&family=Montserrat:wght@500&display=swap" rel="stylesheet">
   </head>
   <!-- Navbar -->
@@ -35,9 +20,10 @@
     <div class="navbar">
         <h1 class="title">FeedBox</h1>
       <div class="navbar-buttons">
-        <button id="about"class="navbar-button home"type="button" name="button">Home</button>
-        <button id="about"class="navbar-button about"type="button" name="button">About</button>
-          <button id="contact"class="navbar-button contact"type="button" name="button">Contact Us</button>
-            <button id="join" class="navbar-button join"type="button" name="button">join</button>
+        <a id="about"class="navbar-button home"type="button" name="button" href="/">Home</a>
+        <a id="about"class="navbar-button about"type="button" name="button" href="/about">About</a>
+          <a id="contact"class="navbar-button contact"type="button" name="button" href="/contact">Contact </a>
+            <a id="join" class="navbar-button join"type="button" name="button">Join</a>
 
       </div>
+      <main id="swup" class="transition-fade">
