--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,39 @@
 <%- include('header') -%>
 
+
 <div class="tagline-div">
 <h1 class="tagline-main">Feedback is the breakfast of champions.</h1>
 <hr class="get-hr">
-<a class="get-button" href="/feedback">Get Feedback</a>
+<a class="get-button" href="/feedback">Use FeedBox</a>
 <hr class="get-hr">
 </div>
+
+
+
+
+    <div id="description"class="description-main-div">
+        <div class="description-1-div description-div" >
+ <h3 class="description-1-head description-head">What is FeedBox?</h3>
+ <ion-icon id="d-1" class="icon-down" name="caret-down-outline">
+ </ion-icon>
+
+  <p class="d-1 description " style="display: none;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pretium sollicitudin lacus at porta. Duis risus massa, euismod quis consequat sed, dapibus id ipsum. Proin et quam pellentesque augue lacinia gravida vel sit amet neque. Duis egestas ex quis lectus aliquam, rutrum sollicitudin nibh ullamcorper. Etiam vitae est urna. Nunc est quam, accumsan efficitur posuere et, commodo at turpis. Phasellus sollicitudin vulputate est eu consectetur. Nunc quam elit, pharetra in sollicitudin vel, tincidunt et turpis. Pellentesque lobortis libero non ex vestibulum tincidunt. Fusce nec fringilla libero. Praesent dictum nulla sed ipsum varius, vulputate finibus purus venenatis. Vivamus eget tellus finibus, ornare odio eu, scelerisque ligula. Morbi eget congue erat. Etiam venenatis, purus ac laoreet mattis, velit mi sagittis purus, in fringilla lectus elit quis quam. Nam tempor semper sapien, vel condimentum magna rhoncus sit amet.</p>
+        </div>
+       <div class="description-div description-2-div">
+<h3 class="description-2-head description-head">How does it work?</h3>
+
+<ion-icon class="icon-down" id="d-2" name="caret-down-outline"></ion-icon> 
+
+<p class="d-2 description" style="display: none;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pretium sollicitudin lacus at porta. Duis risus massa, euismod quis consequat sed, dapibus id ipsum. Proin et quam pellentesque augue lacinia gravida vel sit amet neque. Duis egestas ex quis lectus aliquam, rutrum sollicitudin nibh ullamcorper. Etiam vitae est urna. Nunc est quam, accumsan efficitur posuere et, commodo at turpis. Phasellus sollicitudin vulputate est eu consectetur. Nunc quam elit, pharetra in sollicitudin vel, tincidunt et turpis. Pellentesque lobortis libero non ex vestibulum tincidunt. Fusce nec fringilla libero. Praesent dictum nulla sed ipsum varius, vulputate finibus purus venenatis. Vivamus eget tellus finibus, ornare odio eu, scelerisque ligula. Morbi eget congue erat. Etiam venenatis, purus ac laoreet mattis, velit mi sagittis purus, in fringilla lectus elit quis quam. Nam tempor semper sapien, vel condimentum magna rhoncus sit amet.</p>
+       </div>
+       <div class="description-div description-2-div">
+        <h3 class="description-3-head description-head">Who are we?</h3>
+        
+        <ion-icon class="icon-down" id="d-3" name="caret-down-outline"></ion-icon> 
+        
+        <p class="d-3 description" style="display: none;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pretium sollicitudin lacus at porta. Duis risus massa, euismod quis consequat sed, dapibus id ipsum. Proin et quam pellentesque augue lacinia gravida vel sit amet neque. Duis egestas ex quis lectus aliquam, rutrum sollicitudin nibh ullamcorper. Etiam vitae est urna. Nunc est quam, accumsan efficitur posuere et, commodo at turpis. Phasellus sollicitudin vulputate est eu consectetur. Nunc quam elit, pharetra in sollicitudin vel, tincidunt et turpis. Pellentesque lobortis libero non ex vestibulum tincidunt. Fusce nec fringilla libero. Praesent dictum nulla sed ipsum varius, vulputate finibus purus venenatis. Vivamus eget tellus finibus, ornare odio eu, scelerisque ligula. Morbi eget congue erat. Etiam venenatis, purus ac laoreet mattis, velit mi sagittis purus, in fringilla lectus elit quis quam. Nam tempor semper sapien, vel condimentum magna rhoncus sit amet.</p>
+               </div>
+   </div>
+
 
 <%- include('footer') -%>
