--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,43 @@
 body {
   background-color: #eeeeee;
   font-family: 'Montserrat', sans-serif;
+  cursor: default;
+}
+input , textarea{
+  outline: none;
+  border-style: solid;
+
+}
+h1::selection , h3::selection{
+  color: #11d3bc;
+}
+p::selection{
+  color:aqua;
+}
+a::selection{
+  color:cyan;
+}
+label::selection{
+  color: aliceblue;
+  background-color: black;
+}
+.text-area{
+  border-style: solid;
+}
+.icon-down{
+  cursor: pointer;
+}
+
+/* Page Animation */
+.transition-fade {
+  transition: 0.4s ;
+}
+html.is-animating .transition-fade{
+  opacity: 0;
+}
+.rotate{
+  transform: rotate(-180deg);
+  transition-duration: 0.5s;
 }
 
 /* navbar */
@@ -13,7 +50,28 @@ body {
 .navbar-buttons {
   position: absolute;
   right:50px;
-  top: 10px
+  top: 10px;
+
+}
+.navbar-button{
+  margin-left: 10px;
+  transition-duration: 0.2s;
+  cursor: default;
+}
+.submit-button{
+  background-color:aquamarine ;
+outline: none;
+  border-radius: 10%;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+border-style:solid;
+  height: 30px;
+  width: 70px;
+  transition-duration: 0.2s;
+}
+.submit-button:hover{
+ background-color: aqua;
+
 }
 /* textbox */
 .hidden {
@@ -27,6 +85,7 @@ textarea{
 .feedback-div{
   margin-left:200px;
   margin-right: 200px;
+  margin-top: 30px;
 text-align: center;
 }
 
@@ -34,9 +93,10 @@ text-align: center;
   margin-top: 5px;
   margin-bottom: 10px;
 }
-.input::placeholder{
+input::placeholder , textarea::placeholder{
   font-family: 'Montserrat', sans-serif;
 }
+
 label {
 margin: 0 0 1.5em 0;
 padding: 0;
@@ -49,6 +109,7 @@ width:100px;
   font-family: 'Kumbh Sans', sans-serif;
   margin-top: 200px;
   margin-left: 33%;
+  margin-bottom: 300px;
 
 
 }
@@ -66,12 +127,56 @@ width:100px;
 }
 .get-hr{
   width: 35%;
-  margin-left: 45px;
+  margin-left: 50px;
 }
 a {
   text-decoration: none;
   color:black;
 }
 a:hover {
+  color: #11d3bc;
+}
+
+.down-arrow {
+  width: 50px;
+  height: 50px;
+  margin-left: 46%;
+  margin-top: 250px;
+
+}
+
+/* Description  */
+
+.description-main-div {
+  margin: 10px 50px 40px 50px;
+}
+.description-head{
+  display: inline-block;
+}
+
+/* Contact page */
+.contact-div {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
+.contact-email, .contact-name , .contact-textarea{
+  margin-top: 10px;
+  border-radius: 5px;
+  font-family: 'Montserrat', sans-serif;
+  width: 200px;
+}
+.contact-textarea{
+  border-style: solid;
+  margin-bottom: 10px;
+  width: 300px;
+}
+.contact-text{
+  margin-left: 50px;
+}
+/* footer */
+.footer{
+  background-color: black;
   color: #11d3bc;
 }
