--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,11 @@
+</main>
+
+<div class="footer">
+  <h3 class="community-text">Join a community of geeky web devs; Where you can interact , meet and learn with some really awesome people.</h3>
+  <a href=""><ion-icon name="logo-discord"></ion-icon></a>
+  </div>
+     </main>
+<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="index.js" charset="utf-8"></script>
 
