--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,8 +1,31 @@
 </main>
 
 <div class="footer">
-  <h3 class="community-text">Join a community of geeky web devs; Where you can interact , meet and learn with some really awesome people.</h3>
-  <a href=""><ion-icon name="logo-discord"></ion-icon></a>
+  <div class="footer-div">
+  <div class="join-div">
+  <p> Join a community of geeky web devs; Where really awesome people meet,interact,learn
+   and help each other.</p>
+  <a href=""></a><button class="join-button">Join Discord Server</button>
+  </div>
+  <hr class="footer-hr">
+  <div class="social-div">
+    <p>Find us on the internet</p>
+    <ion-icon class="social-icon" name="logo-instagram"></ion-icon>
+    <ion-icon class="social-icon" name="logo-github"></ion-icon>
+    <ion-icon class="social-icon" name="logo-paypal"></ion-icon>
+    <ion-icon class="social-icon" name="logo-reddit"></ion-icon>
+
+  </div>
+  <hr class="footer-hr">
+  <div class="contact-details">
+  <p>Contact us at</p>
+<p>abc@gmail.com</p>
+<p>47489374678</p>
+<p> Easy Streets, New York</p>
+  </div>
+
+  
+
   </div>
      </main>
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
