--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -6,27 +6,21 @@
 
     <div class="feedback-div-top">
 
-      <label for="name">Your Name:</label>
-      <input type="text" class="input name" name="" value="">
+      
+      <input type="text" class="input name" name="" value="" placeholder="Enter your name">
 
       <br>
 
-      <label for="email">Your Email:</label>
-      <input type="email" class="input email" name="" value="">
+      
+      <input type="email" class="input email" name="" value="" placeholder="Enter your email">
 
       <br>
 
-      <label for="project-link">Project link:</label>
-      <input class="input project-link" placeholder="Enter your project's link" type="text" name="project-link" value="">
-
+      
+      <input class="input project-link" placeholder="Enter your project's github link" type="text" name="project-link" value="">
+      <p class="change-input">Upload the folder instead</p>
       <br>
-
-      <label for="Attach-file">Attach File:</label>
-      <input type="file" class="input Attach file" name="" value="">
-
-      <br>
-
-      <label for="description">Descibe your project:</label>
+    
       <textarea class="textbox description input" name="name" rows="8" cols="80" placeholder="tell us what your project is about..."></textarea>
 
     </div>
