--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,33 @@
-<%- include('header') -%>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>FeedBox</title>
+   
+
+<!-- Css Stylesheet -->
+    <link rel="stylesheet" href="styles.css">
+<!-- Swup -->
+<script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script> 
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+  </head>
+  <!-- Navbar -->
+  <body>
+    <div class="navbar">
+        <h1 class="title">FeedBox</h1>
+      <div class="navbar-buttons">
+        <a id="about"class="navbar-button home"type="button" name="button" href="/">Home</a>
+        <a id="about"class="navbar-button about"type="button" name="button" href="/about">About</a>
+          <a id="contact"class="navbar-button contact"type="button" name="button" href="/contact">Contact </a>
+            <a id="join" class="navbar-button join"type="button" name="button">Join</a>
+
+      </div>
+      <main id="swup" class="transition-fade">
 
 
 <div class="tagline-div">
